minor layout bug fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -240,18 +240,21 @@ article.modal{
   height: 20px;
   width: 20px;
   border-radius: 50%;
+  flex: 1;
+  margin: 0.5rem
 }
 .edit-color{
   display: none;
 }
 .edit-color:checked + div{
-  border: 2px solid white;
+  border: 2px solid rgb(246, 250, 255);
 }
 
 .edit-color-parent{
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
 }
 
 
